# Kredo-lighting

./: .gitignore  .gitmodules  CMakeLists.txt  Kredo-lighting-Config.h.in  README.md  po_compile.sh  po_update.sh
locale/ru/: Kredo.mo  Kredo.po
resources/shaders/: basic.fs  basic.vs
src/: main.cpp
src/core/: application.cpp  application.h  camera.cpp  camera.h  filesystem.cpp  filesystem.h  icon_helpers.cpp  icon_helpers.h  icons.cpp  icons.h  logger_controller.h  main_window.cpp  main_window.h  pointers.h  shader.cpp  shader.h
src/entities/: camera.cpp  camera.h  components.cpp  components.h  scene.cpp  scene.h  scene_layer.cpp  scene_layer.h  uuid.cpp  uuid.h
src/log/: log_controller.cpp  log_controller.h  log_formatter.cpp  log_formatter.h  log_window.cpp  log_window.h
src/logger/: logger_controller.cpp  logger_controller.h  logger_window.cpp  logger_window.h
src/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_canvas.cpp  opengl_canvas.h  opengl_manager.cpp  opengl_manager.h  opengl_shader.cpp  opengl_shader.h  opengl_vertex_array.cpp  opengl_vertex_array.h  opengl_window.cpp  opengl_window.h
src/rc/: kredo_logo.xpm  log.xpm
src/test/: test_layer.cpp  test_layer.h
